package ro.uaic.info.game.objects.weapon;

public class ChainGunFirePattern {
}
