@startuml

title __WEAPON's Class Diagram__\n

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.pattern.ChainGunFirePattern {
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.pattern.FiringPattern {
        + fireNextProjectile()
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.Gun {
        + Gun()
        + getFiringPattern()
        + getProjectileType()
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.pattern.LinearFiringPattern {
    }
  }
  

  namespace ro.uaic.info.game.objects.weapon {
    class ro.uaic.info.game.objects.weapon.pattern.ScatterShotFiringPattern {
    }
  }
  

  ro.uaic.info.game.objects.weapon.Gun o-- ro.uaic.info.game.objects.weapon.pattern.FiringPattern : firingPattern
  ro.uaic.info.game.objects.weapon.Gun o-- ro.uaic.info.game.objects.weapon.projectile.ProjectileType : projectileType


@enduml
